Another cut of the chunk code